# vocab_cards

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  REVIEW.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.cursor/plans/: backend_and_ai_enrich_69615f3b.plan.md  magoosh-style_vocab_frontend_da80d491.plan.md
.github/workflows/: frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_words_table.py  002_users_and_word_ownership.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py
backend/app/db/: seed.py  session.py
backend/app/models/: user.py  word.py
backend/app/repositories/: dependencies.py  sqlalchemy_user_repository.py  sqlalchemy_word_repository.py  user_repository.py  word_repository.py
backend/app/routers/: admin.py  auth.py  words.py
backend/app/schemas/: user.py  word.py
backend/app/services/: jwt.py  ollama.py  srs.py  srs_constants.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_enrich.py  test_srs.py  test_words_api.py
backend/vocab_cards_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  lighthouserc.accessibility.json  lighthouserc.performance.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: authApi.ts  authTypes.ts  contract.md  http.ts  types.ts  wordsApi.test.ts  wordsApi.ts
frontend/src/auth/: AuthProvider.test.tsx  AuthProvider.tsx  (+1 more)
(+64 files in other folders)
